@@ -26,8 +26,6 @@
  */
 package com.janilla.addressbook.frontend;
 
-import java.io.IOException;
-import java.io.UncheckedIOException;
 import java.lang.reflect.Modifier;
 import java.net.InetSocketAddress;
 import java.nio.file.Files;
@@ -36,18 +34,16 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Properties;
 import java.util.function.Function;
 
-import javax.net.ssl.SSLContext;
-
-import com.janilla.frontend.AbstractIndexFactory;
+import com.janilla.frontend.DefaultIndexFactory;
 import com.janilla.frontend.IndexFactory;
 import com.janilla.http.HttpClient;
 import com.janilla.http.HttpHandler;
 import com.janilla.http.HttpServer;
 import com.janilla.ioc.DefaultDiFactory;
 import com.janilla.ioc.DiFactory;
+import com.janilla.java.Configuration;
 import com.janilla.java.Java;
 import com.janilla.web.ApplicationHandlerFactory;
 import com.janilla.web.Invocable;
@@ -58,54 +54,36 @@ import com.janilla.web.ResourceMap;
 
 public class AddressBookFrontend {
 
-	public static final String[] DI_PACKAGES = { "com.janilla.web", "com.janilla.addressbook.frontend" };
+	public static final String[] DI_PACKAGES = { "com.janilla", "com.janilla.addressbook.frontend" };
 
 	public static void main(String[] args) {
 		IO.println(ProcessHandle.current().pid());
-		var f = new DefaultDiFactory(
-				Arrays.stream(DI_PACKAGES).flatMap(x -> Java.getPackageClasses(x, false).stream()).toList());
+
+		var f = new DefaultDiFactory(Arrays.stream(DI_PACKAGES).flatMap(x -> Java.getPackageTypes(x, true)).toList());
 		serve(f, args.length > 0 ? args[0] : null);
 	}
 
 	protected static void serve(DiFactory diFactory, String configurationPath) {
 		AddressBookFrontend a;
 		{
+			var cf = configurationPath != null ? Path.of(
+					configurationPath.startsWith("~") ? System.getProperty("user.home") + configurationPath.substring(1)
+							: configurationPath)
+					: null;
 			a = diFactory.newInstance(diFactory.classFor(AddressBookFrontend.class),
-					Java.hashMap("diFactory", diFactory, "configurationFile",
-							configurationPath != null ? Path.of(configurationPath.startsWith("~")
-									? System.getProperty("user.home") + configurationPath.substring(1)
-									: configurationPath) : null));
+					Java.hashMap("diFactory", diFactory, "configurationFile", cf));
 		}
-
-		var c = sslContext(a.configuration);
 
 		HttpServer s;
 		{
 			var p = Integer.parseInt(a.configuration.getProperty("address-book.server.port"));
 			s = a.diFactory.newInstance(a.diFactory.classFor(HttpServer.class),
-					Map.of("sslContext", c, "endpoint", new InetSocketAddress(p), "handler", a.handler));
+					Map.of("endpoint", new InetSocketAddress(p), "handler", a.handler));
 		}
 		s.serve();
 	}
 
-	protected static SSLContext sslContext(Properties configuration) {
-		var p = configuration.getProperty("address-book.server.keystore.path");
-		if (p == null)
-			return HttpClient.sslContext("TLSv1.3");
-		var w = configuration.getProperty("address-book.server.keystore.password");
-		if (p.startsWith("~"))
-			p = System.getProperty("user.home") + p.substring(1);
-		var f = Path.of(p);
-		if (!Files.exists(f))
-			Java.generateKeyPair("localhost", f, w, "dns:localhost,ip:127.0.0.1");
-		try (var s = Files.newInputStream(f)) {
-			return Java.sslContext(s, w.toCharArray());
-		} catch (IOException e) {
-			throw new UncheckedIOException(e);
-		}
-	}
-
-	protected final Properties configuration;
+	protected final Configuration configuration;
 
 	protected final DataFetching dataFetching;
 
@@ -127,32 +105,31 @@ public class AddressBookFrontend {
 //		IO.println("AddressBookFrontend, configurationFile=" + configurationFile);
 		this.diFactory = diFactory;
 		diFactory.context(this);
-		configuration = diFactory.newInstance(diFactory.classFor(Properties.class),
-				Collections.singletonMap("file", configurationFile));
 
-		httpClient = diFactory.newInstance(diFactory.classFor(HttpClient.class),
-				Map.of("sslContext", sslContext(configuration)));
+		configuration = diFactory.newInstance(diFactory.classFor(Configuration.class),
+				Collections.singletonMap("path", configurationFile));
+
+		httpClient = diFactory.newInstance(diFactory.classFor(HttpClient.class));
 		dataFetching = diFactory.newInstance(diFactory.classFor(DataFetching.class));
 		resourceMap = diFactory.newInstance(diFactory.classFor(ResourceMap.class), Map.of("paths",
 				Map.of("/base",
 						Java.getPackagePaths("com.janilla.frontend", false).filter(Files::isRegularFile).toList(), "",
 						Java.getPackagePaths("com.janilla.addressbook.frontend", false).filter(Files::isRegularFile)
 								.toList())));
-		indexFactory = diFactory.newInstance(diFactory.classFor(AbstractIndexFactory.class));
+		indexFactory = diFactory.newInstance(diFactory.classFor(DefaultIndexFactory.class));
 
-		invocationResolver = diFactory.newInstance(diFactory.classFor(InvocationResolver.class),
-				Map.of("invocables",
-						diFactory.types().stream()
-								.flatMap(x -> Arrays.stream(x.getMethods())
-										.filter(y -> !Modifier.isStatic(y.getModifiers()) && !y.isBridge())
-										.map(y -> new Invocable(x, y)))
-								.toList(),
-						"instanceResolver", (Function<Class<?>, Object>) x -> {
-							var y = diFactory.context();
+		invocationResolver = diFactory.newInstance(diFactory.classFor(InvocationResolver.class), Map.of("invocables",
+				diFactory.types().stream().filter(x -> !(x.isInterface() || Modifier.isAbstract(x.getModifiers())))
+						.flatMap(x -> Arrays.stream(x.getMethods())
+								.filter(y -> !Modifier.isStatic(y.getModifiers()) && !y.isBridge())
+								.map(y -> new Invocable(x, y)))
+						.toList(),
+				"instanceResolver", (Function<Class<?>, Object>) x -> {
+					var y = diFactory.context();
 //							IO.println("x=" + x + ", y=" + y);
-							return x.isAssignableFrom(y.getClass()) ? diFactory.context()
-									: diFactory.newInstance(diFactory.classFor(x));
-						}));
+					return x.isAssignableFrom(y.getClass()) ? diFactory.context()
+							: diFactory.newInstance(diFactory.classFor(x));
+				}));
 		renderableFactory = diFactory.newInstance(diFactory.classFor(RenderableFactory.class));
 		{
 			var f = diFactory.newInstance(diFactory.classFor(ApplicationHandlerFactory.class));
@@ -165,7 +142,7 @@ public class AddressBookFrontend {
 		}
 	}
 
-	public Properties configuration() {
+	public Configuration configuration() {
 		return configuration;
 	}
 
